# EventSystem

./: CMakeLists.txt
src/: main.cpp
src/Core/: Window.cpp  Window.h
src/Core/Event/: Event.h
src/Core/Event/Char/: CharEvent.h
src/Core/Event/Keyboard/: KeyPressEvent.h  KeyReleaseEvent.h
src/Core/Event/Mouse/: MouseMoveEvent.h  MousePressEvent.h  MouseReleaseEvent.h  MouseScrollEvent.h
src/Core/Event/Window/: WindowCloseEvent.h  WindowResizeEvent.h
